fixed blurry eges of image slides

--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -33,16 +33,20 @@ body {
   align-items: center;
 }
 
-.swiper-slide .slide-img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur (8px);
-  -webkit-filter: blur(5px);
-}
 .slide-img-sm {
   width: 20% !important;
+}
+.background-image {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  mask-image: radial-gradient(circle, white, black) !important;
+}
+
+.mangaSlideInfo {
+  z-index: 3 !important;
 }
 
 .swiper {
